--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,16 @@
 @import "tailwindcss";
+
+*{
+    .lunasima-regular {
+  font-family: "Lunasima", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.lunasima-bold {
+  font-family: "Lunasima", sans-serif;
+  font-weight: 700;
+  font-style: normal;
+}
+
+}
